finish styling for nav bar mobile/non-mobile

--- a/index.html
+++ b/index.html
@@ -45,51 +45,39 @@
                         <div class="">New Patient Offers</div>
                     </a></li>
                     <li class="current"><a href="#" data-scrollto="#no-insurance" data-offset="60">
-                        <div class="">No Insurance?</div>
-                    </a></li>
-                    <li class="current"><a href="#" data-scrollto="#patient-reviews" data-offset="60">
                         <div class="">Reviews</div>
                     </a></li>
-                    <li class="current"><a href="#" data-scrollto="#meet-your-dental-team" data-offset="60">
-                        <div>Team</div>
+                    <li class="current"><a href="#" data-scrollto="#patient-reviews" data-offset="60">
+                        <div class="">Team</div>
                     </a></li>
-                    <li class="current"><a href="#" data-scrollto="#office-tour" data-offset="60">
+                    <li class="current"><a href="#" data-scrollto="#meet-your-dental-team" data-offset="60">
                         <div>Tour</div>
                     </a></li>
-                    <li class="current"><a href="#" data-scrollto="#services" data-offset="60">
+                    <li class="current"><a href="#" data-scrollto="#office-tour" data-offset="60">
                         <div>Services</div>
                     </a></li>
-                    <li class="current"><a href="#" data-scrollto="#patient-forms" data-offset="55">
-                        <div>Forms</div>
-                    </a></li>
-                    <li class="current"><a href="#" data-scrollto="#contact" data-offset="60">
+                    <li class="current"><a href="#" data-scrollto="#office-tour" data-offset="60">
                         <div>Location</div>
                     </a></li>
                 </ul>
 
                 <ul class="mobile-primary-menu navbar">
                     <li class="current"><a href="#" data-scrollto="#fall-specials" data-offset="0">
-                        <div class="t700">New Patient Offers</div>
+                        <div class="">New Patient Offers</div>
                     </a></li>
                     <li class="current"><a href="#" data-scrollto="#no-insurance" data-offset="0">
-                        <div class="t700">No Insurance?</div>
+                        <div class="">Reviews</div>
                     </a></li>
-                    <li class="current"><a href="#" data-scrollto="#patient-reviews" data-offset="00">
-                        <div class="t700">Reviews</div>
+                    <li class="current"><a href="#" data-scrollto="#patient-reviews" data-offset="0">
+                        <div class="">Team</div>
                     </a></li>
                     <li class="current"><a href="#" data-scrollto="#meet-your-dental-team" data-offset="0">
-                        <div>Team</div>
-                    </a></li>
-                    <li class="current"><a href="#" data-scrollto="#office-tour" data-offset="0">
                         <div>Tour</div>
                     </a></li>
-                    <li class="current"><a href="#" data-scrollto="#services" data-offset="0">
+                    <li class="current"><a href="#" data-scrollto="#office-tour" data-offset="0">
                         <div>Services</div>
                     </a></li>
-                    <li class="current"><a href="#" data-scrollto="#patient-forms" data-offset="0">
-                        <div>Forms</div>
-                    </a></li>
-                    <li class="current"><a href="#" data-scrollto="#contact" data-offset="0">
+                    <li class="current"><a href="#" data-scrollto="#office-tour" data-offset="0">
                         <div>Location</div>
                     </a></li>
                 </ul>
