--- a/index.html
+++ b/index.html
@@ -97,27 +97,45 @@
 
         <div class="swiper-container swiper-parent">
             <div class="swiper-wrapper">
-                <div class="swiper-slide" id="slide-1" style="background-image: url('images/slide1.jpg');">
+                <div class="swiper-slide" id="slide-1" style="background-image: url('images/slide3.jpg');">
                     <div class="container clearfix">
-                        <div class="slider-caption slider-caption-left">
-                            <h2 data-caption-animate="fadeInUp" data-caption-delay="200">Welcome to Canvas</h2>
-                            <p data-caption-animate="fadeInUp" data-caption-delay="200">Create just what you need for your Perfect Website. Choose from a wide range of Elements &amp; simply put them on our Canvas.</p>
+                        <div class="slider-caption slider-caption-right">
+                            <h2 data-caption-animate="fadeInUp" data-caption-delay="200">The Beauty of a</h2>
+                            <h1 data-caption-animate="fadeInUp" data-caption-delay="200">Healthy Smile</h1>
+                            <h4 class="center" data-caption-animate="fadeInUp" data-caption-delay="200">Now Welcoming New Patients</h4>
+                            <div class="center btn-wrap" data-caption-animate="fadeInUp" data-caption-delay="200"><a class="button">NEW PATIENT OFFERS</a></div>
                         </div>
                     </div>
                 </div>
                 <div class="swiper-slide" id="slide-2" style="background-image:url('images/slide2.jpg');">
                     <div class="container clearfix">
                         <div class="slider-caption slider-caption-right">
-                            <h2 data-caption-animate="fadeInUp">Beautifully Flexible</h2>
-                            <p data-caption-animate="fadeInUp" data-caption-delay="200">Looks beautiful &amp; ultra-sharp on Retina Screen Displays. Powerful Layout with Responsive functionality that can be adapted to any screen size.</p>
+                            <div data-caption-animate="fadeInUp" data-caption-delay="200" class="star-set center">
+                                <i class="icon-star3"></i>
+                                <i class="icon-star3"></i>
+                                <i class="icon-star3"></i>
+                                <i class="icon-star3"></i>
+                                <i class="icon-star3"></i>
+                            </div>
+                                <h2 data-caption-animate="fadeInUp" data-caption-delay="200" class="center">Better than ever!</h2>
+                                <p data-caption-animate="fadeInUp" data-caption-delay="200" class="center">“My smile is back, better than ever! <br>Dr. Zandstra immediately put me at ease. Thank you for giving me such a beautiful&nbsp;smile!” – Pam M.</p>
+                                <div class="center btn-wrap" data-caption-animate="fadeInUp" data-caption-delay="200"><a class="button">READ OUR REVIEWS</a></div>
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide" id="slide-3" style="background-image: url('images/slide3.jpg;">
+                <div class="swiper-slide" id="slide-3" style="background-image: url('images/slide1.jpg');">
                     <div class="container clearfix">
                         <div class="slider-caption slider-caption-left">
-                            <h2 data-caption-animate="fadeInUp" data-caption-delay="200">Welcome to Canvas</h2>
-                            <p data-caption-animate="fadeInUp" data-caption-delay="200">Create just what you need for your Perfect Website. Choose from a wide range of Elements &amp; simply put them on our Canvas.</p>
+                            <div data-caption-animate="fadeInUp" data-caption-delay="200" class="star-set center">
+                                <i class="icon-star3"></i>
+                                <i class="icon-star3"></i>
+                                <i class="icon-star3"></i>
+                                <i class="icon-star3"></i>
+                                <i class="icon-star3"></i>
+                            </div>
+                            <h2 data-caption-animate="fadeInUp" data-caption-delay="200" class="center">5-Star Reviews</h2>
+                            <h4 class="center" data-caption-animate="fadeInUp" data-caption-delay="200">Read what our patients have to<br>say about Dr. Zandstra!</h4>
+                            <div class="center"><a class="button" data-caption-animate="fadeInUp" data-caption-delay="200">READ OUR REVIEWS</a></div>
                         </div>
                     </div>
                 </div>
