style phone slug non-mobile

--- a/index.html
+++ b/index.html
@@ -159,17 +159,12 @@
                         <div class="col-sm-6 tright">
                             <h6>New Patient Hotline</h6>
                             <div class="new-hotline"><a href="tel:+12168004202">(216) 800&#8209;4202</a></div>
+                            <p class="old-hotline">Existing patients: <a
+                                    href="tel:+12162212210">(216) 221&#8209;2210</a></p>
                         </div>
                         <div class="col-sm-6 tleft">
                             <a class="button" data-toggle="modal" data-target="#contact-modal">REQUEST
                                 APPOINTMENT</a>
-                        </div>
-                    </div>
-                    <div class="row center">
-                        <div class="col-sm-12">
-                            <p class="old-hotline">Existing patients<span class="hidden-xs"> of our practice</span> call: <br
-                                    class="visible-xs-block"><a
-                                    href="tel:+12162212210">(216) 221&#8209;2210</a></p>
                         </div>
                     </div>
                 </div>
