--- a/index.html
+++ b/index.html
@@ -170,6 +170,33 @@
                 </div>
             </section>
 
+            <section id="meet-the-doctor">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-4">
+
+                        </div>
+                        <div class="col-sm-8">
+                            <h3>Meet the Doctor</h3>
+                            <h2>Dr. Estelle Zandstra</h2>
+                            <h4>General and Cosmetic Dentist</h4>
+                            <p>
+                                The minute you walk through the door you will know you’ve come to the right place. By combining advanced dental technology and training with a gentle, friendly style, Dr. Estelle Zandstra and her team will make you more comfortable than you ever thought&nbsp;possible.</p>
+
+                                <p>Dr. Zandstra is a graduate of the Medical College of Virginia School of Dentistry and has completed a University of Florida Residency in Prosthodontics—a distinction earned by fewer than 2% of all dentists. In addition, she has extensive experience and post-doctoral studies in cosmetic dentistry and full mouth reconstruction. So, whether you need advanced care or a routine cleaning, you can be assured that all your dentistry will be performed with the utmost precision and&nbsp;care.</p>
+
+                                <p>Yet, despite all the clinical accolades, Dr. Zandstra’s most compelling feature is something even more special—she listens. Your needs and concerns are our top priority, helping us provide you with the finest dentistry has to offer in a caring and professional&nbsp;way.</p>
+
+                                <p>Dr. Zandstra and her husband, Mike, live right here in Alpharetta. They have been married 10 years and have 2&nbsp;children.</p>
+
+                                <p>Dr. Zandstra is a member of the American Dental Association, Georgia Dental Association, American Academy of Dental Sleep Medicine, American Association of Women Dentists, American College of Prosthodontics and Alpha Omega&nbsp;International.</p>
+
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
             <!---- Fall Specials Section ----->
             <section id="specials" class="section-specials">
                 <div class="container clearfix">
