--- a/index.html
+++ b/index.html
@@ -198,16 +198,16 @@
 
 
             <!---- Fall Specials Section ----->
+            <section id="specials-top">
+                <div class="container">
+                    <div class="center specials-top">
+                        <h3>Limited Time Special Offers</h3>
+                        <h5>Offer Ends by December 20, 2016</h5>
+                    </div>
+                </div>
+            </section>
             <section id="specials" class="section-specials">
                 <div class="container clearfix">
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <div class="center">
-                                <h2>Limited Time Fall&nbsp;Specials</h2>
-                                <p>Offer Ends by November&nbsp;20,&nbsp;2016</p>
-                            </div>
-                        </div>
-                    </div>
                     <div class="row specials-row">
                         <div class="col-md-4">
                             <div class="specials-top specials-1">
