finish styling phone slug 2 non-mobile

--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
                     <div class="row center">
                         <div class="col-sm-6 tright">
                             <h6>New Patient Hotline</h6>
-                            <div class="new-hotline"><a href="tel:+12168004202">(216) 800&#8209;4202</a></div>
+                            <div class="new-hotline"><a href="tel:+18884187563">(888) 418&#8209;7563</a></div>
                             <p class="old-hotline">Existing patients: <a
-                                    href="tel:+12162212210">(216) 221&#8209;2210</a></p>
+                                    href="tel:+7704104999">(770) 410&#8209;4999</a></p>
                         </div>
                         <div class="col-sm-6 tleft">
                             <a class="button" data-toggle="modal" data-target="#contact-modal">REQUEST
@@ -217,9 +217,9 @@
                                 <span class="dollar">$</span><span class="price">65</span>
                             </div>
                             <div class="specials-bottom">
-                                <span class="specials-save specials-1">SAVE $XXX</span>
-                                <p>Includes comprehensive exam by the doctor and necessary x‑rays.</p>
-                                <span class="specials-label">(D0150, Dxxxx)</span>
+                                <span class="specials-save specials-1">SAVE $140</span>
+                                <p>Includes comprehensive exam by the doctor and necessary&nbsp;x‑rays.</p>
+                                <span class="specials-label">(D0150, D0330)</span>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -230,25 +230,41 @@
                                 <span class="dollar">$</span><span class="price">45</span>
                             </div>
                             <div class="specials-bottom">
-                                <span class="specials-save specials-2">SAVE $XX</span>
+                                <span class="specials-save specials-2">SAVE $48</span>
                                 <p>Includes a professional dental cleaning. A new patient exam is required. Does not
-                                    include periodontal therapy. </p>
+                                    include periodontal&nbsp;therapy. </p>
                                 <span class="specials-label">(D1110)</span>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="specials-top specials-3">
-                                <h5>New&nbsp;Children’s<br> Cleaning&nbsp;&amp;&nbsp;Exam</h5>
+                                <h5>Professional<br>Tooth Whitening</h5>
                             </div>
                             <div class="specials-3 specials-circle">
-                                <span class="dollar">$</span><span class="price">99</span>
+                                <span class="dollar">$</span><span class="price">149</span>
                             </div>
                             <div class="specials-bottom">
-                                <span class="specials-save specials-3">SAVE $XXX</span>
-                                <p>Patients 12 and under receive a professional dental cleaning, fluoride treatment,
-                                    needed x‑rays, and a comprehensive exam.  </p>
-                                <span class="specials-label">(D1120, D120x, D027x, D0150)</span>
+                                <span class="specials-save specials-3">SAVE $96</span>
+                                <p>Save on our take-home professional tooth whitening system. A comprehensive doctor’s exam is&nbsp;required.
+                                </p>
+                                <span class="specials-label"></span>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="specials-below">
+                <div class="container">
+                    <div class="row center">
+                        <div class="col-sm-6 tright">
+                            <h6>New Patient Hotline</h6>
+                            <div class="new-hotline"><a href="tel:+18884187563">(888) 418&#8209;7563</a></div>
+                            <p class="old-hotline">Existing patients: <a
+                                    href="tel:+17704104999">(770) 410&#8209;4999</a></p>
+                        </div>
+                        <div class="col-sm-6 tleft">
+                            <a class="button" data-toggle="modal" data-target="#contact-modal">REQUEST
+                                APPOINTMENT</a>
                         </div>
                     </div>
                 </div>
