finish styling reviews section non-mobile

--- a/index.html
+++ b/index.html
@@ -270,6 +270,19 @@
                 </div>
             </section>
 
+            <section id="reviews">
+                <div class="container">
+                    <div class="center">
+                        <h3>What Our Patients are Saying</h3>
+                    </div>
+
+                    <script type="text/javascript" src="http://birdeye.com/embed/v4/147319682650371/3/880927280"></script>
+                    <div id="bf-revz-widget-880927280" style="-webkit-overflow-scrolling:touch;">
+                        <div class="bf-dv"><span class="bf-spn">provided by <a class="bf-pro" href="http://www.tysonsteele.com/" target="_blank">Tyson Steele Associates</a></span>
+
+                </div>
+            </section>
+
             <!---- Contact Section ----->
             <section id="contact" class="section-contact full-screen section nopadding nomargin noborder ohidden">
                 <div class="vertical-middle">
@@ -465,7 +478,7 @@
 <script type="text/javascript" src="js/custom.js"></script>
 <!-- endbuild -->
 
-<script type="text/javascript" src="http://birdeye.com/embed/v4/147499703823236/3/4261390074"></script>
+<script type="text/javascript" src="http://birdeye.com/embed/v4/147319682650371/3/880927280"></script>
 
 
 <!-- Google Map Script
