add in missing divs to reviews section

--- a/index.html
+++ b/index.html
@@ -277,11 +277,15 @@
                     </div>
 
                     <script type="text/javascript" src="http://birdeye.com/embed/v4/147319682650371/3/880927280"></script>
-                    <div id="bf-revz-widget-880927280" style="-webkit-overflow-scrolling:touch;">
-                        <div class="bf-dv"><span class="bf-spn">provided by <a class="bf-pro" href="http://www.tysonsteele.com/" target="_blank">Tyson Steele Associates</a></span>
 
+
+                    <div id="bf-revz-widget-880927280" style="-webkit-overflow-scrolling:touch;">
+                        <div class="bf-dv"><span class="bf-spn">provided by <a class="bf-pro" href="http://www.tysonsteele.com/" target="_blank">Tyson Steele Associates</a></span></div>
+                    </div>
                 </div>
             </section>
+
+
 
             <!---- Contact Section ----->
             <section id="contact" class="section-contact full-screen section nopadding nomargin noborder ohidden">
