--- a/index.html
+++ b/index.html
@@ -285,6 +285,23 @@
                 </div>
             </section>
 
+            <section id="office-tour">
+                <div class="container">
+                    <div class="center">
+                        <h3>Office Tour</h3>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6 center">
+                            <p>We look forward to meeting you and your family. Our beautiful, Inviting office is a refreshing place to relax while getting your dental work done. We welcome children too, so make an appointment today!</p>
+                            <a class="button">VIEW OFFICE TOUR</a>
+                        </div>
+                        <div class="col-sm-6 center">
+                            <img src="images/office-tour-photo.png" alt="Office Tour Photo">
+                        </div>
+                    </div>
+                </div>
+            </section>
+    
 
 
             <!---- Contact Section ----->
