add in services carousel

--- a/index.html
+++ b/index.html
@@ -301,7 +301,87 @@
                     </div>
                 </div>
             </section>
-    
+
+            <section id="services-top">
+                <div class="container">
+                    <div class="center">
+                        <h3>Our Services</h3>
+                        <p>By actively preventing disease and decay through regular home care, professional dental cleanings and regular exams, we’ll partner with you to maintain your healthy, beautiful smile. Prevention is always better than treatment, so if it’s been a while since you’ve seen a dentist, please give us a call or <a href="#">click&nbsp;to&nbsp;request&nbsp;an&nbsp;appointment</a>.</p>
+                    </div>
+                </div>
+            </section>
+
+            <section id="services">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md-6">
+                                <h3>Cosmetic Dentistry</h3>
+                                <p>Cosmetic dentistry is one of the most cost-effective ways to improve your appearance. A beautiful, bright, healthy smile can increase self confidence and overall life satisfaction. Cosmetic dentistry can encompass things such as tooth-colored fillings, dental implants, or crowns. We have many options, so please call us for a free cosmetic consultation.</p>
+                        </div>
+                        <div class="col-md-6">
+                                <h3>Implant Dentistry</h3>
+                                <p>Dental implants are a great option for replacing missing teeth, improving chewing ability, eliminating bridges, and replacing dentures. Several implants may provide a base for a series of artificial teeth known as a fixed bridge. Implants can even be used to secure a full set of removable dentures for people who have no remaining natural teeth.</p>
+                            </div>
+                    </div>
+                </div>
+            </section>
+
+            <section id="services-carousel">
+                    <div id="related-portfolio" class="owl-carousel owl-carousel-full portfolio-carousel portfolio-notitle portfolio-nomargin carousel-widget" data-margin="0" data-nav="true" data-pagi="false" data-items-xxs="1" data-items-xs="2" data-items-sm="3" data-items-md="4" data-items-lg="4">
+
+                        <div class="oc-item">
+                            <div class="iportfolio">
+                                <div class="portfolio-image">
+                                    <div class="img-wrap">
+                                        <img src="images/services/veneers.jpg" alt="Veneers">
+                                    </div>
+                                </div>
+                                <div class="portfolio-desc">
+                                    <span>Veneers</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="oc-item">
+                            <div class="iportfolio">
+                                <div class="portfolio-image">
+                                    <div class="img-wrap">
+                                        <img src="images/services/pain-relief.jpg" alt="Veneers">
+                                    </div>
+                                </div>
+                                <div class="portfolio-desc">
+                                    <span>Pain Relief</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="oc-item">
+                            <div class="iportfolio">
+                                <div class="portfolio-image">
+                                    <div class="img-wrap">
+                                        <img src="images/services/apnea.jpg" alt="Veneers">
+                                    </div>
+                                </div>
+                                <div class="portfolio-desc">
+                                    <span>Sleep Apnea</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="oc-item">
+                            <div class="iportfolio">
+                                <div class="portfolio-image">
+                                    <div class="img-wrap">
+                                        <img src="images/services/crowns.jpg" alt="Veneers">
+                                    </div>
+                                </div>
+                                <div class="portfolio-desc">
+                                    <span>Crowns</span>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div><!-- .portfolio-carousel end -->
+            </section>
+
 
 
             <!---- Contact Section ----->
