--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             </section>
 
             <section id="services-carousel">
-                    <div id="related-portfolio" class="owl-carousel owl-carousel-full portfolio-carousel portfolio-notitle portfolio-nomargin carousel-widget" data-margin="0" data-nav="true" data-pagi="false" data-items-xxs="1" data-items-xs="2" data-items-sm="3" data-items-md="4" data-items-lg="4">
+                    <div id="related-portfolio" class="owl-carousel owl-carousel-full portfolio-carousel portfolio-notitle portfolio-nomargin carousel-widget" data-margin="0" data-loop="true" data-nav="true" data-pagi="false" data-items-xxs="1" data-items-xs="2" data-items-sm="3" data-items-md="4" data-items-lg="4">
 
                         <div class="oc-item">
                             <div class="iportfolio">
@@ -374,6 +374,84 @@
                                 </div>
                                 <div class="portfolio-desc">
                                     <span>Crowns</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="oc-item">
+                            <div class="iportfolio">
+                                <div class="portfolio-image">
+                                    <div class="img-wrap">
+                                        <img src="images/services/bridges.jpg" alt="Bridges">
+                                    </div>
+                                </div>
+                                <div class="portfolio-desc">
+                                    <span>Bridges</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="oc-item">
+                            <div class="iportfolio">
+                                <div class="portfolio-image">
+                                    <div class="img-wrap">
+                                        <img src="images/services/composites.jpg" alt="Composites">
+                                    </div>
+                                </div>
+                                <div class="portfolio-desc">
+                                    <span>Composites</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="oc-item">
+                            <div class="iportfolio">
+                                <div class="portfolio-image">
+                                    <div class="img-wrap">
+                                        <img src="images/services/dentures.jpg" alt="Dentures">
+                                    </div>
+                                </div>
+                                <div class="portfolio-desc">
+                                    <span>Dentures</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="oc-item">
+                            <div class="iportfolio">
+                                <div class="portfolio-image">
+                                    <div class="img-wrap">
+                                        <img src="images/services/laser.jpg" alt="Laser">
+                                    </div>
+                                </div>
+                                <div class="portfolio-desc">
+                                    <span>Laser</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="oc-item">
+                            <div class="iportfolio">
+                                <div class="portfolio-image">
+                                    <div class="img-wrap">
+                                        <img src="images/services/onlays.jpg" alt="Onlays">
+                                    </div>
+                                </div>
+                                <div class="portfolio-desc">
+                                    <span>Onlays</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="oc-item">
+                            <div class="iportfolio">
+                                <div class="portfolio-image">
+                                    <div class="img-wrap">
+                                        <img src="images/services/periodontal.jpg" alt="Periodontal">
+                                    </div>
+                                </div>
+                                <div class="portfolio-desc">
+                                    <span>Periodontal</span>
                                 </div>
                             </div>
                         </div>
