finish styling sub-copyright section

--- a/index.html
+++ b/index.html
@@ -469,20 +469,25 @@
                         <!-- Contact Form Overlay
                         ============================================= -->
                         <div id="contact-form-overlay-mini" class="clearfix">
-                            <div class="img-wrap center">
-                                <a href="#" data-scrollto="#header" data-offset="0"><img
-                                        src="images/masthead-logo.png" alt="Logo"></a>
-                            </div>
                             <div class="center">
-                                <p class="address">53 3rd Street SW<br>Huron, SD 57350</p>
-                                <a class="click-map" target="_blank"
-                                   href="">Click to view map</a></p>
-                                <p class="patient-hotline">New Patient Hotline</p>
-                                <a href="tel:+18887179818"><p class="text-phone-1">(888) 717&#8209;9818</p></a>
-                                <a class="button button-2" data-toggle="modal"
+                                <!--<a href="#" data-scrollto="#header" data-offset="0">-->
+                                    <!--<img src="images/zandstra-logo-BOTTTOM.svg" alt="Logo">-->
+                                <!--</a>-->
+                                <p class="p-1">3005 Royal Blvd South, Suite 220</p>
+                                <p class="p-2">Alpharetta, GA 30022</p>
+                                <a href="#"><p class="p-3">Click to view map</p></a>
+                                <p class="p-4">New Patient Hotline</p>
+                                <a href="tel:+18884187563"><p class="p-5">(888) 418&#8209;7563</p></a>
+                                <a class="button" data-toggle="modal"
                                    data-target="#contact-modal">REQUEST APPOINTMENT</a>
-                                <p class="patient-hotline">Existing Patients Call</p>
-                                <a href="tel:+16053523070"><p class="text-phone-2">(605) 352&#8209;3070</p></a>
+                                <p class="p-6">Existing Patients Call</p>
+                                <a href="tel:+17704104999"><p class="p-7">(605) 352&#8209;3070</p></a>
+                                <p class="p-8">Hours</p>
+                                <p class="hours"><span class="day">Mon:</span>8:00am - 5:00pm</p>
+                                <p class="hours"><span class="day">Tue:</span>8:00am - 5:00pm</p>
+                                <p class="hours"><span class="day">Wed:</span>8:00am - 5:00pm</p>
+                                <p class="hours"><span class="day">Thu:</span>8:00am - 5:00pm</p>
+                                <p class="hours">Closed Fridays</p>
                             </div>
 
 
@@ -523,6 +528,11 @@
 
         <!-- Copyrights
        ============================================= -->
+        <div id="sub-copyright">
+            <div class="center">
+                <span class="finance-text">Financing Available:</span><img src="images/care-credit.png" alt="Care Credit">
+            </div>
+        </div>
         <div id="copyrights">
 
             <div class="container clearfix">
