import in correct google map

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                                 <!--</a>-->
                                 <p class="p-1">3005 Royal Blvd South, Suite 220</p>
                                 <p class="p-2">Alpharetta, GA 30022</p>
-                                <a href="#"><p class="p-3">Click to view map</p></a>
+                                <a href="https://goo.gl/maps/ntoVJKYos4F2" target="_blank"><p class="p-3">Click to view map</p></a>
                                 <p class="p-4">New Patient Hotline</p>
                                 <a href="tel:+18884187563"><p class="p-5">(888) 418&#8209;7563</p></a>
                                 <a class="button" data-toggle="modal"
@@ -506,7 +506,7 @@
 
             </section>
             <section class="hidden-lg hidden-md hidden-sm map-below-contact-section">
-                <a href="https://www.google.com/maps/place/Countryside+Dental/@44.3635128,-98.2173919,17z/data=!3m1!4b1!4m5!3m4!1s0x8787be86af8561f9:0x33c98a69617b8349!8m2!3d44.3633863!4d-98.2151916" target="_blank"><img class="map-below-contact" src="images/countryside-dental-map.jpg" alt="Location Map"></a>
+                <a href="https://goo.gl/maps/ntoVJKYos4F2" target="_blank"><img class="map-below-contact" src="images/map-img.jpg" alt="Location Map"></a>
 
             </section>
 
@@ -648,17 +648,17 @@
 <script>
     var map;
     function initMap() {
-        var myLatLng = {lat: 29.562602, lng: -98.681717};
+        var myLatLng = {lat: 34.054258, lng: -84.272491};
         map = new google.maps.Map(document.getElementById('google-map'), {
             center: myLatLng,
-            zoom: 17,
+            zoom: 15,
             scrollwheel: false,
             draggable: false
         });
         var marker = new google.maps.Marker({
             position: myLatLng,
             map: map,
-            title: 'Aurora Family Dentistry'
+            title: 'Zandstra Estelle DDS'
         });
     }
 </script>
