--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             <section id="services-carousel">
                     <div id="related-portfolio" class="owl-carousel owl-carousel-full portfolio-carousel portfolio-notitle portfolio-nomargin carousel-widget" data-margin="0" data-loop="true" data-nav="true" data-pagi="false" data-items-xxs="1" data-items-xs="2" data-items-sm="3" data-items-md="4" data-items-lg="4">
 
-                        <div class="oc-item">
+                        <div class="oc-item" data-toggle="modal" data-target="#veneers">
                             <div class="iportfolio">
                                 <div class="portfolio-image">
                                     <div class="img-wrap">
@@ -341,7 +341,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="oc-item">
+                        <div class="oc-item" data-toggle="modal" data-target="#pain-relief">
                             <div class="iportfolio">
                                 <div class="portfolio-image">
                                     <div class="img-wrap">
@@ -353,7 +353,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="oc-item">
+                        <div class="oc-item" data-toggle="modal" data-target="#sleep-apnea">
                             <div class="iportfolio">
                                 <div class="portfolio-image">
                                     <div class="img-wrap">
@@ -365,7 +365,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="oc-item">
+                        <div class="oc-item" data-toggle="modal" data-target="#crowns">
                             <div class="iportfolio">
                                 <div class="portfolio-image">
                                     <div class="img-wrap">
@@ -378,7 +378,7 @@
                             </div>
                         </div>
 
-                        <div class="oc-item">
+                        <div class="oc-item" data-toggle="modal" data-target="#bridges">
                             <div class="iportfolio">
                                 <div class="portfolio-image">
                                     <div class="img-wrap">
@@ -391,7 +391,7 @@
                             </div>
                         </div>
 
-                        <div class="oc-item">
+                        <div class="oc-item" data-toggle="modal" data-target="#composites">
                             <div class="iportfolio">
                                 <div class="portfolio-image">
                                     <div class="img-wrap">
@@ -399,12 +399,12 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-desc">
-                                    <span>Composites</span>
+                                    <span>Restorations</span>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="oc-item">
+                        <div class="oc-item" data-toggle="modal" data-target="#dentures">
                             <div class="iportfolio">
                                 <div class="portfolio-image">
                                     <div class="img-wrap">
@@ -417,7 +417,7 @@
                             </div>
                         </div>
 
-                        <div class="oc-item">
+                        <div class="oc-item" data-toggle="modal" data-target="#laser">
                             <div class="iportfolio">
                                 <div class="portfolio-image">
                                     <div class="img-wrap">
@@ -430,7 +430,7 @@
                             </div>
                         </div>
 
-                        <div class="oc-item">
+                        <div class="oc-item" data-toggle="modal" data-target="#onlays">
                             <div class="iportfolio">
                                 <div class="portfolio-image">
                                     <div class="img-wrap">
@@ -443,7 +443,7 @@
                             </div>
                         </div>
 
-                        <div class="oc-item">
+                        <div class="oc-item" data-toggle="modal" data-target="#periodontal">
                             <div class="iportfolio">
                                 <div class="portfolio-image">
                                     <div class="img-wrap">
@@ -598,26 +598,205 @@
 
 <!-- Services Modals -->
 
-<div class="modal fade service-modal" id="orthodontics" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade service-modal" id="dentures" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                     aria-hidden="true">×</span></button>
-            <h4 class="modal-title">Orthodontics</h4>
+            <h4 class="modal-title">Cosmetic Dentures</h4>
         </div>
         <div class="modal-body">
             <div class="img-wrap hidden-xs hidden-sm">
-                <img src="images/services/orthodontics.jpg" alt="Orthodontics">
+                <img src="images/services/dentures.jpg" alt="Dentures">
             </div>
             <div class="service-modal-text">
-                <p>A beautifully-aligned natural smile can be obtained both with traditional metal braces and other more subtle options like ClearCorrect “invisible” orthodontics. ClearCorrect “invisible” aligners are the latest in orthodontic technology for adults and teens. Straight teeth and a revitalized smile no longer need to come from a mouth full of wire and bracket braces.</p>
-
-                <p>Get the smile you’ve always wanted with traditional and ClearCorrect orthodontics! Call us today for a orthodontic consultation.</p>
+                <p>A well made denture is not only comfortable and functions properly; it also allows the wearer to smile with confidence, knowing that their smile is no different than it would be with natural teeth. Creating a cosmetic denture is really an art in the hands of a skilled dentist like Dr. Zandstra.</p>
 
             </div>
         </div>
     </div>
 </div>
+
+<div class="modal fade service-modal" id="laser" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                    aria-hidden="true">×</span></button>
+            <h4 class="modal-title">Laser Dentistry</h4>
+        </div>
+        <div class="modal-body">
+            <div class="img-wrap hidden-xs hidden-sm">
+                <img src="images/services/laser.jpg" alt="Laser">
+            </div>
+            <div class="service-modal-text">
+                <p>Laser dentistry is a highly-effective, gentle way to treat gum disease, remove bacteria, and re-contour gum lines after cosmetic dentistry. Laser dentistry is a more comfortable, accurate way to produce excellent results.</p>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade service-modal" id="crowns" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                    aria-hidden="true">×</span></button>
+            <h4 class="modal-title">Porcelain Crowns & Bridges</h4>
+        </div>
+        <div class="modal-body">
+            <div class="img-wrap hidden-xs hidden-sm">
+                <img src="images/services/crowns.jpg" alt="Crowns">
+            </div>
+            <div class="service-modal-text">
+                <p>Protect and keep badly decayed or fractured teeth while maintaining a beautiful smile. Made to perfectly match the shape and shade of your other teeth, they’re durable, strong, and undetectable.</p>
+
+                <p>Crowns should be placed before the tooth is so decayed that it may fracture. This can often help prevent the expense of root canal therapy in the future. If a tooth is too damaged to have a crown applied, a porcelain bridge may be a good alternative.</p>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade service-modal" id="bridges" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                    aria-hidden="true">×</span></button>
+            <h4 class="modal-title">Porcelain Crowns & Bridges</h4>
+        </div>
+        <div class="modal-body">
+            <div class="img-wrap hidden-xs hidden-sm">
+                <img src="images/services/bridges.jpg" alt="Bridges">
+            </div>
+            <div class="service-modal-text">
+                <p>Protect and keep badly decayed or fractured teeth while maintaining a beautiful smile. Made to perfectly match the shape and shade of your other teeth, they’re durable, strong, and undetectable.</p>
+
+                <p>Crowns should be placed before the tooth is so decayed that it may fracture. This can often help prevent the expense of root canal therapy in the future. If a tooth is too damaged to have a crown applied, a porcelain bridge may be a good alternative.</p>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade service-modal" id="onlays" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                    aria-hidden="true">×</span></button>
+            <h4 class="modal-title">Porcelain Onlays</h4>
+        </div>
+        <div class="modal-body">
+            <div class="img-wrap hidden-xs hidden-sm">
+                <img src="images/services/onlays.jpg" alt="Onlays">
+            </div>
+            <div class="service-modal-text">
+                <p>Dr. Zandstra strives to conserve your own healthy tooth structure whenever possible. For those who have worn or cracked teeth, or who have large silver fillings, Dr. Zandstra recommends porcelain onlays. The porcelain bonds directly to the tooth enamel which means it is both durable and beautiful.</p>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade service-modal" id="veneers" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                    aria-hidden="true">×</span></button>
+            <h4 class="modal-title">Veneers</h4>
+        </div>
+        <div class="modal-body">
+            <div class="img-wrap hidden-xs hidden-sm">
+                <img src="images/services/veneers.jpg" alt="Veneers">
+            </div>
+            <div class="service-modal-text">
+                <p>Veneers are very thin porcelain pieces that are custom made to adhere directly to the front of teeth without grinding or shaving. Transform your smile without drilling on your natural teeth!</p>
+
+                <p>In the hands of a highly skilled dentist, porcelain laminates can provide you with an incredibly natural, beautiful smile. They are virtually undetectable and can dramatically improve your appearance. They are durable and long-lasting when compared to other cosmetic treatments.</p>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade service-modal" id="sleep-apnea" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                    aria-hidden="true">×</span></button>
+            <h4 class="modal-title">Sleep Apnea</h4>
+        </div>
+        <div class="modal-body">
+            <div class="img-wrap hidden-xs hidden-sm">
+                <img src="images/services/apnea.jpg" alt="Sleep Apnea">
+            </div>
+            <div class="service-modal-text">
+                <p>Obstructive sleep apnea occurs when the airway completely collapses, blocking airflow into the lungs. The harder one tries to breathe, the tighter the airway seals. This airway obstruction persists until the brain partially awakens the person, unconsciously closing the jaw and returning the tongue and throat to a normal position.</p>
+
+                <p>We offer effective, nonsurgical relief from sleep apnea and other sleep-related disorders—including snoring. Ask us how you can get the restful, healthy sleep you’ve been missing.</p>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade service-modal" id="pain-relief" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                    aria-hidden="true">×</span></button>
+            <h4 class="modal-title">Pain Relief</h4>
+        </div>
+        <div class="modal-body">
+            <div class="img-wrap hidden-xs hidden-sm">
+                <img src="images/services/pain-relief.jpg" alt="Pain Relief">
+            </div>
+            <div class="service-modal-text">
+                <p>If you suffer from headaches or pain, clicking or popping while chewing, there may be problems with your temporomandibular joint (or TMJ). Call us today to schedule a free TMJ treatment consultation.</p>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade service-modal" id="periodontal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                    aria-hidden="true">×</span></button>
+            <h4 class="modal-title">Periodontal Therapy</h4>
+        </div>
+        <div class="modal-body">
+            <div class="img-wrap hidden-xs hidden-sm">
+                <img src="images/services/periodontal.jpg" alt="Periodontal">
+            </div>
+            <div class="service-modal-text">
+                <p>Gum disease is treated by carefully removing the bacteria and substances that form in the pockets around the teeth. The removal of this material occurs on a microscopic level and requires great skill. Our dental team has had advanced training to effectively remove all of the bacteria.</p>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade service-modal" id="composites" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                    aria-hidden="true">×</span></button>
+            <h4 class="modal-title">Tooth-Colored Restorations</h4>
+        </div>
+        <div class="modal-body">
+            <div class="img-wrap hidden-xs hidden-sm">
+                <img src="images/services/composites.jpg" alt="Restorations">
+            </div>
+            <div class="service-modal-text">
+                <p>The common silver filling contains mercury. Dr. Zandstra uses the highest-quality biocompatible, tooth-colored restorations to create healthy, beautiful smiles.​ Since the composite material adheres directly to the tooth enamel, less preparation of the tooth is required before using it. This means it is more durable and provides a more natural-looking result.</p>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+
 
 <!-- JS Templates
 		====================== -->
